@@ -1,65 +1,0 @@
-
-3Dec is an accurate base-caller for Illumina Sequencing platforms including GA, GAII, Hiseq and Miseq. It includes the module of correcting spatial crosstalk. It reads Cluster Intensity Files (CIF) and cluster location files (.clocs or _pos.txt); and output CIF files of corrected spatial crosstalk, or called sequences in FASTQ format.
-
-3Dec Version 0.02 by Bo Wang (flish_wang@sina.com)
-Multi-thread version.
-
-Permission is granted under Creative Commons Attribution-NonCommercial-
-ShareAlike 4.0 International Public License. If the licence is not attached 
-with the software, you can obtain it at: 
-http://creativecommons.org/licenses/by-nc-sa/4.0/
-
-
-Type "3Dec --help" to show the help.
-Usage:
-3Dec [options]* {-t -q | -r} <name|pattern> [name|pattern]* ...
-    -t    outputs ACC-corrected CIF files.
-    -q    outputs called sequences in Fastq format.
-    -r    outputs called sequences in Fastq format after re-base-calling
-          ACC-corrected intensity data. 
-   name   Specifies the tile name to be processed.
- pattern  A pattern XYZ+ specifies all tile names beginning with XYZ.
-
-Options:
-    -l    Specifies the subfix (or the expand name) of 
-          input location files in the next input arguments(Default .clocs)
-    -L    short for [-l _pos.txt].
-    -s    inputs CIFs are seperated (eg. when input Illumina Runfolder):
-          each cycle in a subfolder.(Default: input intensities from a
-          single file.)
-    -S    outputs CIFs are seperated. Will be ignored for [-q] or [-r].
-          (Default: outputs intensities in a single CIF file.)
-    -e    Specifies the total ends.(Default: only one end.) Data are 
-          processed independently for each ends.
-    -c    specifies the begin and end cycle for each ends in the next
-          arguments. Must be set after [-e]. Eg. [-c 1,101,102,109,110,210]
-          specifies the cycles for the 3 ends of [-e 3].
-    -i    specifies the input directory in the next arguments. Default:
-          current folder.
-    -o    specifies the output directory in the next arguments. Default:
-          current folder.
-    -m    specifies the .model file used for Phred-Score prediction. Details
-          see the help of 3Dec-train.
-    -n    does not correct ACC if -q or -t.
-    -f    reduces iteration for latter blocks when estimating phasing. This
-          will reduce calculation time while slightly reducing the accuracy.
-    -p    specifies the processes used. Default: OPENMP default value.
-    --inpath    the same as [-i].
-    --loctype   the same as [-l].
-    --outpath   the same as [-o].
-    --version   print 3Dec version.
-    --inprefix  prefix for input
-    --oprefix   prefix for output
-    --insubfix  subfix for input
-    --osubfix   subfix for output
-          Arguments following the four commands specifies the extra part of 
-          input and output CIF(fastq) files' names comparing with location files'
-          names. The four argument adds prefix or subfix to the I/O files' names.
-
-Examples:
-  3Dec -i ./L001 -o ./output -q s_1_1101 s_1_12+
-  This command reads location file s_1_1101.clocs in directory ./L001, then reads CIF file s_4_1101.cif in the same direcotory, and then do the base-calling and output s_4_1101.fastq in directory ./output. Then it searches the directory ./L001 for all files with the name pattern s_1_12*.clocs, and reads the cif file with the same tile name and write fastq files in ./output.
-
-  3Dec -i ./L001 -o ./L001 -s -S -c 1,101 -t s+
-  This command searches the directory ./L001 for all location files with the name pattern s*.clocs, then for each location file sA.clocs, it reads seperated CIF files ./L001/C1.1/sA.cif, ./L001/C2.1/sA.cif, ... , ./L001/C101.1/sA.cif, and correct spatial crosstalk for them and then write the corrected CIF files back (overwrite the original files).
-
