@@ -1,4 +1,7 @@
-
+10/28/2016:
+Add locs2pos (used to convert .locs file into _pos.txt format)
+Merge ReadMe.txt and Manual into one file "ReadMe.txt"
+Modified some description in --help
 
 07/31/2016:
 Add an empty file in ./build to keep the folder existing on github. Also modified the clean command in makefile so that the empty file won't be removed when typing make clean;
